! Fixed username positioning in topic pages on iOS browsers. Please -- don't ask. If you really must know, it was an old hack for iOS 4 (from rev 1584), that was fixed by Apple in iOS 5, without my knowledge. To hell with iOS 4, I'm removing the hack entirely. (extra.ios.css)
* Tweaked layout in userbox for mobile; should be properly aligned, now. (Wireless/extra.css)

- Duplicate code. (Wine/extra.css)

! Forgot some <ins> styling. (extra.rtl.css)

+ Some line needed clearing up. (contributors.txt)

--- a/Themes/default/skins/Wine/extra.css
+++ b/Themes/default/skins/Wine/extra.css
@@ -55,8 +55,6 @@ table.cs0 final tr.windowbg:last-child td
 #sidebar
 	background: $window_bg
 	display: @is (ie[-7], block, table-cell)
-	vertical-align: top
-	width: $sidebar-width
 	border: 1px solid #ccc
 	border-left: 0
 	border-radius: 0 8px 8px 0
