--- a/Themes/default/skins/extra.ios.css
+++ b/Themes/default/skins/extra.ios.css
@@ -35,10 +35,5 @@
 @remove .bbc_code, .php_code
 	word-wrap: normal
 
-// iOS needs its hacks, too. Don't even bother, this one makes absolutely
-// no frigging sense. If set to 'relative', the menu refuses to show up.
-h4 .mime
-	position: absolute
-
 #ajax, #popup
 	position: absolute
