--- a/Themes/default/skins/extra.rtl.css
+++ b/Themes/default/skins/extra.rtl.css
@@ -242,6 +242,8 @@ span.percent
 #forumposts
 	ins
 		float: right
+		padding-left: 0
+		padding-right: 4px
 	.reportlinks
 		margin-left: 1.5em
 		text-align: left
